[gd_scene load_steps=24 format=3 uid="uid://dq5jdcydql54l"]

[ext_resource type="Script" path="res://Characters/chicken.gd" id="1_6ge4f"]
[ext_resource type="Texture2D" uid="uid://cvce87scnjjxd" path="res://Art/Sprout Lands - Sprites - Basic pack/Characters/Free Chicken Sprites.png" id="1_hxsrg"]
[ext_resource type="PackedScene" uid="uid://bahdudmbf7ayg" path="res://Objects/Interact Area/interact_area.tscn" id="3_mwlw1"]

[sub_resource type="Animation" id="Animation_rav34"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xjnn3"]
resource_name = "idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="Animation" id="Animation_1rrw7"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_py6oo"]
_data = {
"RESET": SubResource("Animation_rav34"),
"idle": SubResource("Animation_xjnn3"),
"walk_right": SubResource("Animation_1rrw7")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_45rp2"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sallr"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3tkqc"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e5sj0"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_q8hqh"]
blend_point_0/node = SubResource("AnimationNodeAnimation_45rp2")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_sallr")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_3tkqc")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_e5sj0")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4oqmw"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3was2"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cl515"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e87gy"]
animation = &"walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_cwauv"]
blend_point_0/node = SubResource("AnimationNodeAnimation_4oqmw")
blend_point_0/pos = Vector2(1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_3was2")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_cl515")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_e87gy")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j4xvq"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_acip2"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t3c8d"]
advance_mode = 0

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_f0qi1"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_q8hqh")
states/Idle/position = Vector2(319, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_cwauv")
states/Walk/position = Vector2(464, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_j4xvq"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_acip2"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_t3c8d")]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8xqkf"]
radius = 2.0
height = 11.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hgihy"]
radius = 2.0
height = 11.0

[node name="Chicken" type="CharacterBody2D"]
script = ExtResource("1_6ge4f")
move_speed = 50.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_hxsrg")
flip_h = true
hframes = 4
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_py6oo")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_f0qi1")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="CollisionShapeRight" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8xqkf")

[node name="CollisionShapeLeft" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hgihy")

[node name="Timer" type="Timer" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
radius = 13.85

[node name="InteractArea" parent="." instance=ExtResource("3_mwlw1")]
position = Vector2(0, 4)
scale = Vector2(0.355305, 0.181288)
collision_layer = 0
collision_mask = 16
monitoring = true
monitorable = false

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="InteractArea" to="." method="_on_interact_area_area_entered"]
